fixed: widget overlap issue

--- a/src/assetbundles/src/css/Dashboard.css
+++ b/src/assetbundles/src/css/Dashboard.css
@@ -126,7 +126,3 @@ body.rtl .widgetmanagerhud .colspan-picker a.highlight.last { border-left: mediu
 .mt--14 {
   margin-top: -14px !important;
 }
-
-.acclaro\\translations\\widgets\\newandmodifiedentries {
-  margin-top: 4%;
-}
