--- a/src/assetbundles/src/css/Translations.css
+++ b/src/assetbundles/src/css/Translations.css
@@ -651,6 +651,10 @@ body.ltr .widget[data-type="acclaro\\translations\\widgets\\NewAndModifiedEntrie
     margin: 10px 0 14px;
 }
 
+#translations-dashboard > .item > .widget {
+    padding-top: 4%;
+}
+
 .btngroup-container {
     align-content: flex-end;
     flex-direction: column;
